--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -95,6 +95,24 @@ footer {
   }
 }
 
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
+
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -162,4 +180,11 @@ aside {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+body {
+  margin: 50;
+  padding: 50;
+  font-family: sans-serif;
+  background: linear-gradient(to right, #b92b27, #1565c0)
 }
