--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= full_title(yield(:title)) %></title>
     <meta charset="utf-8">
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csp_meta_tag %>
 
    <%= stylesheet_link_tag 'application', media: 'all',
