Add Comment section

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,32 @@
 <% provide(:title, @post.title) %>
+<div>
 <div class="row">
   <section class="user_info">
        <h1>
          <%= @post.title %>
-         <%= @post.content %>
-      </h1>
+        </h1>
+        <div>
+        <%= @post.content %>
+        </div>
+ 
+  
     </section>
+</div>
+<div class="box" >
+<hr style="height:1px;border-width:0;color:gray;background-color:gray">
+        <% if !@post.comments.any? %>
+          <div class="text-center">
+            <h3> Be the first to comment </h3>
+          </div>
+          <%= @post.comments.count %> Comments
+          <%= render @post.comments %>
+          <h3>Add a Comment</h3>
+          <%= render 'comments/form' %>
+        <% else %>
+          <%= @post.comments.count %> Comments
+          <%= render @post.comments %>
+          <h3>Add a Comment</h3>
+          <%= render 'comments/form' %>
+        <% end %>
+</div>
 </div>
