--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,9 +4,9 @@
     <%= form.label :name %>
     <%= form.text_field :title, class: "form-control", placeholder: "Title", required:"required" %>
   </div>
-<div class="field">
+  <div class="field">
     <%= form.label :content %>
-    <%= form.rich_text_area :content, placeholder: "Write a Blog...", required:"required" %>
+    <%= form.rich_text_area :content, class: "form-control", placeholder: "Write a Blog...", required:"required" %>
   </div>
   <%= form.submit "Post", class: "btn btn-primary" %>
 <% end %>
