--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,13 @@
       </h1>
     </section>
   </aside>
+
+  <div class="col-md-7">
+  
+ 
+  <h1>My Blogs</h1>
+  <ul class="posts">
+  <%= render @posts %>
+  </ul>
+  </div>
 </div>
