--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  I am Patil Pradnyesh Sharad. learning Ruby On Rails 
+  I am Patil Pradnyesh Sharad, currently i am learning Ruby On Rails.
 </p>
