Edit About Info and some other text

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  I am Patil Pradnyesh Sharad, currently i am learning Ruby On Rails.
+  I am Patil Pradnyesh Sharad, currently i am in last year B.Tech student  in Computer Science Engineering.
+  I am familier with C, CPP, JAVA, Ruby and Ruby On Rails. I am very enthusiast for exploring new technologies.
+  To view my Resume Click <a href="https://docs.google.com/document/d/14OKXenI9AMm4_V9EGu6MXC2-WG5uKznCbVKvfq2vM9w/edit?usp=sharing">Here.</a>
 </p>
